fixed man glitch

--- a/acxi.1
+++ b/acxi.1
@@ -381,7 +381,7 @@ Sample: \fBacxi \-s ./ \-\-image='cover.jpg'\fR
 
 Sample: \fBacxi \-s ./ \-\-image remove\fR
 
-Sample: \fBacxi \-s ./ \-\-I cover.jpg \-\-remove\-images\fR
+Sample: \fBacxi \-s ./ \-I cover.jpg \-\-remove\-images\fR
 
 .TP
 .B \-\-input [flac|raw|shn|wav]\fR, \fB\-i [flac|raw|shn|wav]\fR
