--- a/acxi.1
+++ b/acxi.1
@@ -1,13 +1,13 @@
-.TH ACXI 1 "2020\-03\-06" acxi "acxi manual"
+.TH ACXI 1 "2020\-03\-07" acxi "acxi manual"
 .SH NAME
 acxi  \- Command line audio conversion tool
 .SH SYNOPSIS
 .IP * 2
 Syncing: \fBacxi\fR [\fB\-a\fR extensions] [\fB\-\-clean\fR] 
 [\fB\-c\fR extensions] 
-[\fB\-d\fR destination-path] [\fB\-\-exclude\fR] 
+[\fB\-d\fR destination-path]  [\fB\-\-dot\fR] [\fB\-\-exclude\fR] 
 [\fB\-\-exclude\-append {filename|extension}\fR] 
-[\fB\-f\fR] [\fB\-\-fork\fR 0-xx] [\fB\-\-hidden\fR] 
+[\fB\-f\fR] [\fB\-\-fork\fR 0-xx]
 [\fB\-i\fR {flac|raw|shn|wave}] [\fB\-o\fR {flac|mp3|ogg|opus}] 
 [\fB\-q\fR NUMBER] [\fB\-s\fR source\-path] 
 .IP * 2
@@ -309,6 +309,14 @@ Full path to the directory where you want the processed lossy
 (eg, ogg) files to go.
 
 .TP
+.B \-\-dot\fR
+Disables the default behavior when creating file/directory syncing/action lists 
+of excluding dot files and directories (like \fB/home/user/.config\fR). Added by 
+request, but use at your own risk, I take NO responsibility for any unintended 
+consequences. Note that if you do find unintended consequences, you should be able 
+to filter those out using additional \fB\-\-exclude\fR lists.
+
+.TP
 .B \-\-exclude [items]\fR, \fB\-x [items]\fR
 Exclude a list of unique strings separated by ^^, or a full path to
 an exclude file whose name includes the value set in \fB$EXCLUDE_BASE\fR. 
@@ -365,14 +373,6 @@ conversion tools for flac, mp3, ogg, or opus output. Same as \fB\-\-log 3\fR
 .TP
 .B \-\-help\fR, \fB\-h\fR
 This help menu.
-
-.TP
-.B \-\-hidden\fR
-Disables the default behavior when creating file/directory syncing/action lists 
-of excluding dot files and directories (like \fB/home/user/.config\fR). Added by 
-request, but use at your own risk, I take NO responsibility for any unintended 
-consequences. Note that if you do find unintended consequences, you should be able 
-to filter those out using additional \fB\-\-exclude\fR lists.
 
 .TP
 .B \-\-image [cover image file name|remove]\fR
