cleaned up man page a touch, some things were not in alphabetical order.

--- a/acxi.1
+++ b/acxi.1
@@ -15,9 +15,9 @@ Tagging: \fBacxi\fR [\fB\-\-autotag\fR] [\fB\-\-autotag\-create\fR]
 [\fB\-\-autotag\-create\-single\fR] 
 [\fB\-\-autotag\-create\-multi {filename start ID}\fR]
 [\fB\-\-aggregate {file name|extension}\fR] [\fB\-\-image {cover image filename}\fR]
-[\fB\-\-no\-replaygain\fR] [\fB\-\-remove\-images\fR] [\fB\-\-remove\-padding\fR]
-[\fB\-\-tag {"TAG1%:tag value^^TAG2%:tag value"}\fR] [\fB\-\-recurse\fR -1-xx]
-[\fB\-\-start\fR 0-xx]
+[\fB\-\-no\-replaygain\fR] [\fB\-\-recurse\fR -1-xx] [\fB\-\-remove\-images\fR] 
+[\fB\-\-remove\-padding\fR] [\fB\-\-start\fR 0-xx]
+[\fB\-\-tag {"TAG1%:tag value^^TAG2%:tag value"}\fR] 
 .IP * 2
 Checksums: \fBacxi\fR [\fB\-\-checksum\fR] [\fB\-\-checksum\-delete\fR] 
 [\fB\-\-checksum\-verify\fR] [\fB\-\-no\-ffp\fR] 
