--- a/acxi.1
+++ b/acxi.1
@@ -557,7 +557,7 @@ so that, for example, if first track is 03.flac, you will see 15/15 for track
 15.flac as you'd expect.
 
 These are not normal circumstances, but they do happen, so now you can handle 
-those. Check your work carefully, check the uato.tag file 
+those. Check your work carefully, check the auto.tag file 
 
 Note: some media players get confused by the track tag number 0, I beileve they
 are doing a top of if not test, and the 0 registers in some cases as not, so the
