one more consistency item, --exclude=UNSET instead of unset, though internally it will accept either, but should use same upper/lower for all instances of UNSET or it's confusing.

--- a/acxi.1
+++ b/acxi.1
@@ -333,7 +333,7 @@ Sample: \fB\-\-exclude='artwork^^Daisy Queen^^Bon Jovi'\fR
 Sample: \fB\-\-exclude='/home/me/music/excludes/acxi-excludes-phone.txt\fR
 
 If you want to temporarily suspend exclude actions one time, use: 
-\fB\-\-exclude='unset'\fR
+\fB\-\-exclude='UNSET'\fR
 
 .TP
 .B \-\-exclude\-append [items]\fR, \fB\-X [items]\fR
