Added a necessary check, for all checksum and tagging options, there must be an explicit --source supplied to avoid potentially catastrophic errors, like accidentally retagging your entire collection when you just meant to retag or image one release.

--- a/acxi.1
+++ b/acxi.1
@@ -1,4 +1,4 @@
-.TH ACXI 1 "2020\-04\-11" acxi "acxi manual"
+.TH ACXI 1 "2020\-04\-20" acxi "acxi manual"
 .SH NAME
 acxi  \- Command line audio conversion tool
 .SH SYNOPSIS
@@ -95,6 +95,11 @@ For example:
 
 Note that some options have long and short forms. The short form is used
 when available in examples in order to keep things simple.
+
+All tagging or checksum options (\fB\-A\fR, \fB\-C\fR, \fB\-D\fR, \fB\-G\fR, 
+\fB\-I\fR, \fB\-K\fR, \fB\-M\fR, \fB\-P\fR, \fB\-R\fR, \fB\-S\fR, \fB\-T\fR, 
+\fB\-V\fR) must have an explicit source (\fB\-s\fR) location supplied to 
+avoid errors.
 
 .SH OPTIONS
 
