more man page updates

--- a/acxi.1
+++ b/acxi.1
@@ -775,6 +775,9 @@ to override the default file types acxi will sync. Set to 'none',
 if you only want to sync the music files, not copy over images, text files,
 etc.
 
+\fBQUALITY_AAC\fR \- Sample: \fBQUALITY_AAC=320\fR Supported values: 10 to 500. 
+500 is the largest file size / highest quality. 
+
 \fBQUALITY_FLAC\fR \- Sample: \fBQUALITY_FLAC=5\fR Supported values: 0\-8. 0 is 
 the largest file size / fastest to run. 5 to 8 shows only a tiny decrease in
 file size but a huge increase in time to process, so 4 is a good balance
