small adjustments to track locator in prefill

--- a/acxi.1
+++ b/acxi.1
@@ -518,9 +518,10 @@ first blank line.
 * Performers must be preceded by a line starting with Band: or Lineup: and must 
 be followed by a blank line, with no empty lines between performers. 
 
-* Track numbers must start with X. or XX. where X is a number. The number of 
-tracks listed must correspoond to the total number of actual track files 
-present. If they do not match in counts, acxi will exit with an error.
+* Track numbers must start with either X-X., X-XX. (for multidisc), X. or XX. 
+where X is a number. The number of tracks listed must correspoond to the total 
+number of actual track files present. If they do not match in counts, acxi will 
+exit with an error.
 
 Should always be run in the flac folder with \fB\-s./\fR or unexpected results 
 could occur.
