--- a/acxi.1
+++ b/acxi.1
@@ -515,8 +515,9 @@ line, and must be in first 5 lines of file.
 * No non Band name, Date, Location info can be on first lines of file before 
 first blank line.
 
-* Performers must be preceded by a line starting with Band: or Lineup: and must 
-be followed by a blank line, with no empty lines between performers. 
+* Performers list must be preceded by a line starting with Band:, 
+Lineup:/Line\-up, or Band Lineup/Linu\-up, and must be followed by a blank line, 
+with no empty lines between performers. 
 
 * Track numbers must start with either X-X., X-XX. (for multidisc), X. or XX. 
 where X is a number. The number of tracks listed must correspoond to the total 
